# OMNIA-CONSTANT

./: .gitignore  .zenodo.json  CITATION.cff  INDEPENDENT_AST_VALIDATION_TEST_RESULT.md  README.md  SEMANTIC_INVARIANCE_TEST_RESULT.md  ecosystem_manifest.json  pyproject.toml
docs/: ACTIVE_CLAIM_MICRO_FIX_REPORT.json  ACTIVE_CLAIM_MICRO_FIX_REPORT.md  BACKBONE_COMPLIANCE.md  BASELINE_PACKS.md  CANDIDATE_TYPES.md  CONSTANT_CLAIM_BOUNDARY.md  CONSTANT_SCOPE.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  OMEGA_0_6_PROTOCOL.md  OMEGA_DISTRIBUTION_MAPS.md  OMNIA_CONSTANT_PUBLIC_POSITION.md  OMNIA_SEMANTIC_INVARIANCE_PROTOCOL_v0.md  PRODUCTION_READINESS.md  REPOSITORY_STATUS.md  RESULTS_INDEX.md  STRUCTURAL_OBSERVABILITY_ROLE.md  TRANSITION_REGION.md
examples/: sample_constant_observations.jsonl  stable_only_observations.jsonl
experiments/: omnia_adapter.py  run_full_pipeline.py
omnia_constant/: __init__.py  backbone_adapter.py
omnia_constant_auditor/: cli.py  core.py
papers/: COCHANGE_TOPOLOGY_TEST_RESULT.md  COMMIT_LEVEL_COCHANGE_SURPRISE_TEST_RESULT.md  CONTROL_FLOW_ABLATION_TEST_RESULT.md  INDEPENDENT_AST_VALIDATION_TEST_RESULT.md  OMNIA_MORPHOLOGICAL_PERTURBATION_ABSTRACT.md  PATCH_GEOMETRY_AST_TEST_RESULT.md  PATCH_GEOMETRY_TEST_RESULT.md  README.md  SEMANTIC_INVARIANCE_TEST_RESULT.md
results/: COCHANGE_TOPOLOGY_TEST_RESULT.md  COMMIT_LEVEL_COCHANGE_SURPRISE_TEST_RESULT.md  CONFIRMED_CANDIDATE_REGION.md  CONTROLLED_GRAPH_PERTURBATION_RESULT.md  CONTROL_FLOW_ABLATION_TEST_RESULT.md  CROSS_METRIC_INDEPENDENCE_RESULT.md  DEPENDENCY_CENTRALITY_TEST_RESULT.md  DJANGO_HISTORICAL_CRISIS_WINDOW_RESULT.md  DJANGO_LOCAL_NEIGHBORHOOD_DYNAMICS_RESULT.md  DUPLICATE_AWARE_SCAN_RESULT.md  FIRST_DISCOVERY_SCAN.md  (+20 more)
(+24 files in other folders)
